# Practice-C-Programming

./: C_prog Test.txt  practice.c
Array_showcase/: pointers_and_array.c
JoshuaApps/c_test/: Makefile  pipe_transfer.c  q8_multithread.c  q9_client_socket.c  q9_server  q9_server_socket.c  server_write.txt  socket_transfer.c  socket_transfer.h
JoshuaApps/c_test_1/: Makefile  q1_add_string  q1_add_string.c
JoshuaApps/c_test_10/: q10_folders.c
JoshuaApps/c_test_2/: Makefile  q2  q2_reverse_string  q2_reverse_string.c
JoshuaApps/c_test_3/: Makefile  q3  q3_check_filesize  q3_check_filesize.c
JoshuaApps/c_test_4/: Makefile  q4  q4_new  q4_read_bin.c  q4_read_binary_app  q4_test_bin.txt
JoshuaApps/c_test_5/: Makefile  q5  q5_delimiter.c  q5_delimiter_app  q5_new
JoshuaApps/c_test_6/: Makefile  q6  q6_function_pointer.c  q6_function_pointer_app  q6_new
JoshuaApps/c_test_7/: Makefile  logger.c  logger.h  q7_log.c  q7_log_app  q7_new
JoshuaApps/c_test_8/: Makefile  configure.ac  main  old_makefile  q8_multithread.c  q8_multithread.h  q8_multithread_app  q8_pipe_transfer.c  q8_pipe_transfer.h  q8_socket_transfer.c  start_q8_multithread
JoshuaApps/c_test_9/: Makefile  nettest  nettest.c  nettest_Makefile  q9_client_socket.c  q9_server_socket.c  q9_server_socket_2.c  q9_start_server_socket  socket_clinet.py
JoshuaApps/functions_demo/: Makefile  (+4 more)
Tests/: linux_add_string.c  linux_check_file_size.c  linux_read_bin.c  linux_reverse_string.c  q5.c
linked_list_showcase/: doubly_linked_demo.c  linked_list_demo.c
multithread_showcase/: multithread_demo.c
(+26 files in other folders)
